Added timeout recovery to camera init frame request

--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -71,6 +71,9 @@
           //init the camera before appending the raw data.
           var packetVideo_initializationInProgress = false;
           emitter.on('x-h264-video.data',function(data){
+            if (self.$$('#camera1')===null){
+              return;
+            }
             if(self.$$('#camera1').initialized){
               self.$$('#camera1').append(new Uint8Array(data));
             } else {
@@ -81,6 +84,10 @@
                     packetVideo_initializationInProgress = false;
                   });
                 });
+                //timeout and try agian after 1 second
+                setTimeout(function(){
+                  packetVideo_initializationInProgress = false;
+                },1000);
               }
             }
           })
