fix emitter stub

--- a/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
+++ b/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
@@ -15,7 +15,8 @@
             },
             off: function () {
             },
-            withHistory: function(event,func) {
+            withHistory: {
+              on:function(event,func) {}
             }
           };
         },
