Removed duplication of setting data
Also added /settings url for dedicated settings page

--- a/src/system-plugins/settings-manager/public/webcomponents/orov-settings-manager.html
+++ b/src/system-plugins/settings-manager/public/webcomponents/orov-settings-manager.html
@@ -628,6 +628,7 @@
            fields.
         */
         _emitter.emit('plugin.settings-manager.getSettings',null,function(settings){
+          _self.$.form1.innerHTML='';
           _self.value = settings;
           _self.editorOptions['schema'] = schema;
           _self.editorOptions['theme'] = 'bootstrap3';
