Fixed divide by 0 error in new ui's power widget

--- a/src/plugins/new-ui/public/webcomponents/power.html
+++ b/src/plugins/new-ui/public/webcomponents/power.html
@@ -225,7 +225,7 @@
             fillColor = this.colors[this.colors.length - 1].color;
           }
           ;
-          if (!isNaN(indicatorWidth) && indicatorWidth >= 0) {
+          if (!isNaN(indicatorWidth) && isFinite( indicatorWidth ) && indicatorWidth >= 0) {
             $(this.$.indicator).css({ fill: fillColor });
             $(this.$.indicator).attr('width', indicatorWidth);
           }
