--- a/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
+++ b/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
@@ -6,6 +6,7 @@
    paper-slider {
       width: 80%;
    }
+
 </style>
 <template>
 
@@ -13,7 +14,7 @@
 <div id="motordiags" style="width: 80%">
  <template is="dom-repeat" items="{{motors}}">
    <div class="control-group">
-      <label class="control-label" for="{{item.name}}">{{__(item.name)}} {{__('Motor')}}</label>
+      <label class="control-label" for="{{item.name}}">{{__(item.name)}} {{__('Motor')}}</label><span style='margin-left: 4px; color: red' hidden$={{!item.reversed}} >({{__('Reversed')}})</span>
       <paper-slider pin="true" min="-1" max="1" step="0.001" id="{{item.name}}" on-immediate-value-change='MotorPercentChange'></paper-slider>
       <span>[[formatPercent(item.percent)]]</span>
       <div>
@@ -31,14 +32,23 @@
     is:'orov-thrusters2x1-motortest',
     properties: {
       motors: {type: Array, value: [
-        {name:'port', percent: 0},
-        {name:'vertical', percent: 0},
-        {name:'starboard', percent: 0}
+        {name:'port', percent: 0, reversed: false},
+        {name:'vertical', percent: 0, reversed: false},
+        {name:'starboard', percent: 0, reversed: false}
       ]}
     },
     behaviors: [namespace('behaviors').oROVStandard],
     registerEmitterHanlders: function(emitter){
       var self = this;
+      emitter.on('settings-change.thrusters2x1',function(settings){
+        self.motors.forEach(function(motor){
+          var index = self.motors.indexOf(motor);
+          self.set('motors.'+index+'.reversed',settings.thrusters2x1[motor.name].reversed);
+      //  motor.reversed = settings.thrusters2x1[motor.name].reversed;
+
+        })
+      //  self.notifyPath('motors',self.motors);
+      })
     },
     resolveMotorPercent: function(change,item){
       return this.motorPercent[item];
