Fixed path info

--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -26,7 +26,8 @@
         framespersecond='{{framesPerSecond}}'
         canvas='{{canvas}}'
         cors='false'
-        showMenu='true'>
+        showMenu='true'
+        showStats='true'>
       <content></content>
     </packet-video>
     </template>
