More general cleanup

--- a/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
+++ b/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
@@ -28,10 +28,10 @@
     },
     attached: function () {
       //Added a new lifecycle event for the control:
-      if (this.eventEmitter !== undefined && this.registerEmitterHanlders !== undefined) {
-        this.registerEmitterHanlders(this.eventEmitter);
+//      if (this.eventEmitter !== undefined && this.registerEmitterHanlders !== undefined) {
+//        this.registerEmitterHanlders(this.eventEmitter);
         console.log('OROV-BEHAVIOR: Registerd eventEmitter');
-      }
+//        }
     },
     _eventEmitterChanged: function (newvalue, oldvalue) {
       var self = this;
