small tweak to improve zooming in new

--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -11,7 +11,7 @@
       }
       .switches-row {
         display: table-row;
-        font-size: 1em;
+        font-size: 1.1vw;
         line-height: 1em;
       }
       .switches-switch-on,
