--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -207,6 +207,7 @@
         registerEmitterHanlders: function(emitter) {
           var self = this;
           var container = $(this.$.switchesContainer);
+          this.$.switchesContainer.innerHTML='';
           for (var aSwitch in self.switches) {
             container.append('<div class="switches-row ' + (self.switches[aSwitch].switchable ? 'switchable' : '') + '" id="' + aSwitch + '" title="' + self.switches[aSwitch].description + '">' + '<div class="switches-switch-on">' + aSwitch + '</div>' + '<div class="switches-switch-off">' + aSwitch + '</div>' + '</div>');
             if (self.switches[aSwitch].switchable) {
