--- a/src/plugins/mobile-ui/public/webcomponents/grid-menu/grid-menu.html
+++ b/src/plugins/mobile-ui/public/webcomponents/grid-menu/grid-menu.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../iron-icons/iron-icons.html">
 <link rel="import" href="../../iron-icons/device-icons.html">
+<link rel="import" href="../../iron-icons/places-icons.html">
 <link rel="import" href="../../iron-icons/image-icons.html">
 <link rel="import" href="../../iron-icons/notification-icons.html">
 <link rel="import" href="../../iron-icons/social-icons.html">
