Refactor Themes for applets and servlets (#61)
* Introducing Applets, micro applications inside the SPA.  There is a new message type from the ui-manager that lists all of the applets available to a theme.  A theme can choose to override existing applets by creating an .ejs file of the same name.

* Themes support special header, head, and footer .ejs files.  Items in these templates will be injected in to each applet that is displayed which allows a theme author to make general style changes that will affect pages that they don't want to completely redo in their own theme.

* Applet changes are reflected in the browser URL.  The build in routing keys off of applications after the hash tag.

* Cleaned up the setting applet, auto saves on any change and basic css support added.

* Existing themes have been upgraded with headers that place nav elements on every applet.

* fixed timing bug around registering event emitter changes

* fine tuning of new-ui css

* Fixed battery configuration bug

--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -11,7 +11,7 @@
       }
       .switches-row {
         display: table-row;
-        font-size: 1em;
+        font-size: 1.1vw;
         line-height: 1em;
       }
       .switches-switch-on,
@@ -207,6 +207,7 @@
         registerEmitterHanlders: function(emitter) {
           var self = this;
           var container = $(this.$.switchesContainer);
+          this.$.switchesContainer.innerHTML='';
           for (var aSwitch in self.switches) {
             container.append('<div class="switches-row ' + (self.switches[aSwitch].switchable ? 'switchable' : '') + '" id="' + aSwitch + '" title="' + self.switches[aSwitch].description + '">' + '<div class="switches-switch-on">' + aSwitch + '</div>' + '<div class="switches-switch-off">' + aSwitch + '</div>' + '</div>');
             if (self.switches[aSwitch].switchable) {
