Fixed font size during scale of depth value

--- a/src/plugins/new-ui/public/webcomponents/depth.html
+++ b/src/plugins/new-ui/public/webcomponents/depth.html
@@ -88,7 +88,7 @@
 
       #depthChangeUp { padding-left: 1em }
       #depthChangeDown { padding-right: 1em }
-      #depth-change-value { vertical-align: middle; font-size: 1.4em }
+      #depth-change-value { vertical-align: middle; font-size: 1.4vw }
       #depth-change-unit {
         margin-top: -6px;
       }
