--- a/src/plugins/mobile-ui/public/webcomponents/settings-menu/settings-menu.html
+++ b/src/plugins/mobile-ui/public/webcomponents/settings-menu/settings-menu.html
@@ -56,7 +56,7 @@
 
 				<grid-menu-button action="callback" target="changeToDesktopUI" icon="image:palette" label="Theme"></grid-menu-button>
 				<grid-menu-button action="callback" target="toggleFullscreen" icon="icons:fullscreen" label="Fullscreen"></grid-menu-button>
-				<grid-menu-button icon="icons:build" label="Calibrate"></grid-menu-button>
+				<grid-menu-button toggles id="record" action="callback" target="toggleRecord" icon="icons:build" label="Record"></grid-menu-button>
 				<grid-menu-button target="modal" icon="hardware:toys" label="Motors"></grid-menu-button>
 
 				<grid-menu-button toggles action="callback" target="toggleLights" icon="icons:lightbulb-outline" label="Lights"></grid-menu-button>
@@ -91,6 +91,17 @@
 							this[ e.detail.target ]( e );
 						}
 					}
+				},
+				
+				registerEmitterHanlders: function(emitter){
+						var self=this;
+             emitter.withHistory.on('plugin-blackbox-recording-status', function(recording){
+							 if(recording){
+								 self.$.record.active=true;
+							 } else {
+								 self.$.record.active=false;
+							 }
+						 });
 				},
 
 				handleTap: function(e)
@@ -148,6 +159,18 @@
 						this.eventEmitter.emit( 'plugin.laser.set', 0 );
 					}
 				},
+								
+				toggleRecord: function( e )
+				{
+					if( e.detail.active  )
+					{
+						this.eventEmitter.emit( 'plugin-blackbox-recording-start');
+					}
+					else
+					{
+						this.eventEmitter.emit( 'plugin-blackbox-recording-stop' );
+					}
+				},				
 
 				toggleDepth: function( e )
 				{
