--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -254,7 +254,11 @@
                 this.selectedItem.bindings.keyboard = $(this.$.keyboard).val();
                 this.selectedItem.bindings.gamepad = $(this.$.gamepad).val();
             }
-            //todo: save
+            if (this.eventEmitter!==undefined) {
+                this.eventEmitter.emit('InputController.updateBinding', this.selectedItem, function() {
+                    console.log('done');
+                });
+            }
         },
         foo: function(list) {
           return "abc" +  list.base.length;  
