fix stats option for video

--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -27,7 +27,7 @@
         canvas='{{canvas}}'
         cors='false'
         showMenu='true'
-        showStats='true'>
+        show-stats='true'>
       <content></content>
     </packet-video>
     </template>
