--- a/src/plugins/geomuxp/public/webcomponents/orov-geomux.html
+++ b/src/plugins/geomuxp/public/webcomponents/orov-geomux.html
@@ -22,32 +22,32 @@
 
 	<paper-button on-click="ResetCamera">Reset Camera</paper-button>
 
-	<paper-toggle-button id="vui" on-change="SetBooleanValue">VUI</paper-toggle-button>
-	<paper-toggle-button id="pict_timing" on-change="SetBooleanValue">Picture Timing</paper-toggle-button>
-	<paper-toggle-button id="flip_vertical" on-change="SetBooleanValue">Flip Vertical</paper-toggle-button>
-	<paper-toggle-button id="flip_horizontal" on-change="SetBooleanValue">Flip Horizontal</paper-toggle-button>
-	<paper-toggle-button id="histogram_eq" on-change="SetBooleanValue">Histogram Equalization</paper-toggle-button>
+	<paper-toggle-button checked={{settings.vui}} id="vui" on-change="SetBooleanValue">VUI</paper-toggle-button>
+	<paper-toggle-button checked={{settings.pict_timing}} id="pict_timing" on-change="SetBooleanValue">Picture Timing</paper-toggle-button>
+	<paper-toggle-button checked={{settings.flip_vertical}} id="flip_vertical" on-change="SetBooleanValue">Flip Vertical</paper-toggle-button>
+	<paper-toggle-button checked={{settings.flip_horizontal}} id="flip_horizontal" on-change="SetBooleanValue">Flip Horizontal</paper-toggle-button>
+	<paper-toggle-button checked={{settings.histogram_eq}} id="histogram_eq" on-change="SetBooleanValue">Histogram Equalization</paper-toggle-button>
 	
-	<span>Framerate</span><paper-slider editable pin id="framerate" 	min="1" max="60" on-change="SetSimpleValue"></paper-slider>
-	<span>Bitrate</span><paper-slider editable pin id="bitrate" 	min="1000" max="10000000" on-change="SetSimpleValue"></paper-slider>
-	<span>GOP Length</span><paper-slider editable pin id="goplen" 	min="1" max="300" on-change="SetSimpleValue"></paper-slider>
-	<span>GOP Hierarchy</span><paper-slider editable pin id="gop_hierarchy_level" 	min="0" max="4" on-change="SetSimpleValue"></paper-slider>
+	<span>Framerate</span><paper-slider value={{settings.framerate}} editable pin id="framerate" 	min="1" max="60" on-change="SetSimpleValue"></paper-slider>
+	<span>Bitrate</span><paper-slider value={{settings.bitrate}} editable pin id="bitrate" 	min="1000" max="10000000" on-change="SetSimpleValue"></paper-slider>
+	<span>GOP Length</span><paper-slider value={{settings.goplen}} editable pin id="goplen" 	min="1" max="300" on-change="SetSimpleValue"></paper-slider>
+	<span>GOP Hierarchy</span><paper-slider value={{settings.gop_hierarchy_level}} editable pin id="gop_hierarchy_level" 	min="0" max="4" on-change="SetSimpleValue"></paper-slider>
 	
-	<span>Zoom</span><paper-slider editable pin id="zoom" 	min="0" max="100" on-change="SetSimpleValue"></paper-slider>
-	<span>Pan</span><paper-slider editable pin id="pan" 	min="-648000" max="648000" on-change="SetSimpleValue"></paper-slider>
-	<span>Tilt</span><paper-slider editable pin id="tilt" 	min="-648000" max="648000" on-change="SetSimpleValue"></paper-slider>
+	<span>Zoom</span><paper-slider value={{settings.zoom}} editable pin id="zoom" 	min="0" max="100" on-change="SetSimpleValue"></paper-slider>
+	<span>Pan</span><paper-slider value={{settings.pan}} editable pin id="pan" 	min="-648000" max="648000" on-change="SetSimpleValue"></paper-slider>
+	<span>Tilt</span><paper-slider value={{settings.tilt}} editable pin id="tilt" 	min="-648000" max="648000" on-change="SetSimpleValue"></paper-slider>
 	
-	<span>Gamma</span><paper-slider editable pin id="gamma" 		min="100" max="300" on-change="SetSimpleValue"></paper-slider>
-	<span>Contrast</span><paper-slider editable pin id="contrast" 	min="0" max="200" on-change="SetSimpleValue"></paper-slider>
-	<span>Brightness</span><paper-slider editable pin id="brightness" 	min="-255" max="255" on-change="SetSimpleValue"></paper-slider>
-	<span>Hue</span><paper-slider editable pin id="hue" 	min="-18000" max="18000" on-change="SetSimpleValue"></paper-slider>
-	<span>Saturation</span><paper-slider editable pin id="saturation" 	min="0" max="200" on-change="SetSimpleValue"></paper-slider>
-	<span>Gain</span><paper-slider editable pin id="gain" 	min="1" max="100" on-change="SetSimpleValue"></paper-slider>
-	<span>Sharpness</span><paper-slider editable pin id="sharpness" 	min="1" max="100" on-change="SetSimpleValue"></paper-slider>
-	<span>Max Analog Gain</span><paper-slider editable pin id="max_analog_gain" 	min="0" max="15" on-change="SetSimpleValue"></paper-slider>
-	<span>Sharpen Filter</span><paper-slider editable pin id="sharpen_filter" 	min="0" max="2" on-change="SetSimpleValue"></paper-slider>
-	<span>Minimum Autoexposure Framerate</span><paper-slider editable pin id="min_exp_framerate" 	min="0" max="30" on-change="SetSimpleValue"></paper-slider>
-	<span>Gain Multiplier</span><paper-slider editable pin id="gain_multiplier" 	min="0" max="256" on-change="SetSimpleValue"></paper-slider>
+	<span>Gamma</span><paper-slider value={{settings.gamma}} editable pin id="gamma" 		min="100" max="300" on-change="SetSimpleValue"></paper-slider>
+	<span>Contrast</span><paper-slider value={{settings.contrast}} editable pin id="contrast" 	min="0" max="200" on-change="SetSimpleValue"></paper-slider>
+	<span>Brightness</span><paper-slider value={{settings.brightness}} editable pin id="brightness" 	min="-255" max="255" on-change="SetSimpleValue"></paper-slider>
+	<span>Hue</span><paper-slider value={{settings.hue}} editable pin id="hue" 	min="-18000" max="18000" on-change="SetSimpleValue"></paper-slider>
+	<span>Saturation</span><paper-slider value={{settings.saturation}} editable pin id="saturation" 	min="0" max="200" on-change="SetSimpleValue"></paper-slider>
+	<span>Gain</span><paper-slider value={{settings.gain}} editable pin id="gain" 	min="1" max="100" on-change="SetSimpleValue"></paper-slider>
+	<span>Sharpness</span><paper-slider value={{settings.sharpness}} editable pin id="sharpness" 	min="1" max="100" on-change="SetSimpleValue"></paper-slider>
+	<span>Max Analog Gain</span><paper-slider value={{settings.max_analog_gain}} editable pin id="max_analog_gain" 	min="0" max="15" on-change="SetSimpleValue"></paper-slider>
+	<span>Sharpen Filter</span><paper-slider value={{settings.sharpen_filter}} editable pin id="sharpen_filter" 	min="0" max="2" on-change="SetSimpleValue"></paper-slider>
+	<span>Minimum Autoexposure Framerate</span><paper-slider value={{settings.min_exp_framerate}} editable pin id="min_exp_framerate" 	min="0" max="30" on-change="SetSimpleValue"></paper-slider>
+	<span>Gain Multiplier</span><paper-slider value={{settings.gain_multiplier}} editable pin id="gain_multiplier" 	min="0" max="256" on-change="SetSimpleValue"></paper-slider>
 	
 	
 	
@@ -58,6 +58,11 @@
       is: 'orov-geomux',
       properties: 
 	  {
+		  settings:
+		  {
+			  type: Object,
+			  value: {}
+		  }
       },
 	  
       behaviors: [namespace('behaviors').oROVStandard],
@@ -66,9 +71,11 @@
 	  {
         var self = this;
 		
-        // emitter.withHistory.on('plugin.rovpilot.headingHold.state', function(state) 
-		// {
-        // });
+        emitter.withHistory.on( "plugin.geomuxp.0_0.settings", function(settings) 
+		{
+			console.log( "Settings: " + JSON.stringify( settings )  );
+			self.settings = settings;
+        });
       },
 	  
       attached: function() 
