Make test mode in streaming obvious

--- a/src/plugins/internet-stream/public/webcomponents/orov-twitch-stream-status.html
+++ b/src/plugins/internet-stream/public/webcomponents/orov-twitch-stream-status.html
@@ -30,6 +30,9 @@
       <div id='preview'></div>
       <table id='stats'>
         <tr>
+          <td>{{__('Mode')}}:<td><td>{{mode}}<td>
+        </tr>
+        <tr>
           <td>{{__('Viewers')}}:<td><td>{{viewers}}<td>
         </tr>
         <tr>
