--- a/src/system-plugins/cloud-profile/public/webcomponents/orov-login-behavior.html
+++ b/src/system-plugins/cloud-profile/public/webcomponents/orov-login-behavior.html
@@ -20,6 +20,11 @@
       behaviors: [namespace('behaviors').oROVStandard],
       registerEmitterHanlders: function(emitter){
         var self = this;
+        if (this.loggedIn){
+          emitter.emit('cloudprofile-status',{loggedIn:true,profile:localStorage.getItem('id_profile')});
+        } else {
+          emitter.emit('cloudprofile-status',{loggedIn:false,profile:null});
+        }
       },
       ready: function(){
         this.lock = new Auth0Lock('VeVsaT3dNLVt1Kv5xIx8GgW69mommmvQ', 'openrov.auth0.com');
@@ -32,10 +37,8 @@
           if ((profile!==null)&&(profile.picture!==undefined)){
             this.profilePictureURL=profile.picture;
           }
-          this.eventEmitter.emit('cloudprofile-status',{loggedIn:true,profile:localStorage.getItem('id_profile')});
         } else {
           this.loggedIn=false;
-          this.eventEmitter.emit('cloudprofile-status',{loggedIn:false,profile:null});
         }
       },
       showLogin: function(){
