--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -150,18 +150,33 @@
                     }
                   }
                 },
-                XLE: {
+                XL0: {
                   switchable: true,
                   state: false,
                   description: 'External LED lights on/off',
                   events: [
-                    {message:'plugin.externalLights.level',fn: function(level){return level>0;}}
+                    {message:'plugin.externalLights.level',fn: function(lightNum, level){ if( lightNum == 0) return level>0; }}
                   ],
                   switch: function (state) {
                     if (self.eventEmitter !== undefined){
                       var level = 1;
                       if (state==true) level = 0;
-                      self.eventEmitter.emit('plugin.externalLights.set',level);
+                      self.eventEmitter.emit('plugin.externalLights.set', 0, level);
+                    }
+                  }
+                },
+                XL1: {
+                  switchable: true,
+                  state: false,
+                  description: 'External LED lights on/off',
+                  events: [
+                    {message:'plugin.externalLights.level',fn: function(lightNum, level){if( lightNum == 1){return level>0;}}}
+                  ],
+                  switch: function (state) {
+                    if (self.eventEmitter !== undefined){
+                      var level = 1;
+                      if (state==true) level = 0;
+                      self.eventEmitter.emit('plugin.externalLights.set', 1, level);
                     }
                   }
                 },
