Fix withHistory and app router

--- a/src/static/webcomponents/orov-behaviors/orov-globalization-behavior.html
+++ b/src/static/webcomponents/orov-behaviors/orov-globalization-behavior.html
@@ -37,7 +37,7 @@
     __: function(str){
       return str;
     },
-    created: function() {
+    append: function() {
       var self = this;
       console.log('oROV Globalization behavior for ', this, 'enabled!');
       window.cockpit_int.i18n.loadNamespace(this.is, function() { 
