--- a/src/plugins/new-ui/public/webcomponents/depth.html
+++ b/src/plugins/new-ui/public/webcomponents/depth.html
@@ -131,6 +131,8 @@
   </template>
   <script>
     (function () {
+      var lastState = null;
+      var newState = null;
       Polymer({
         is: 'orov-newui-depth',
         properties: {
@@ -164,10 +166,16 @@
         registerEmitterHanlders: function(emitter) {
           var self = this;
           emitter.on('plugin.navigationData.data', function (data) {
-            if ('depth' in data) {
-              self.set('depth',Number(data.depth));//.toFixed(1);
-            }
+            newState = data;
           });
+          setInterval(function(){
+              if (newState == lastState){return;};
+              lastState = newState
+              var data = lastState;
+              if ('depth' in data) {
+                self.set('depth',Number(data.depth));//.toFixed(1);
+              }
+          },100);
           emitter.withHistory.on('plugin.rovpilot.depthHold.state', function (state) {
             if(state.enabled){
             self.target = Number(state.targetDepth).toFixed(1);
