--- a/src/system-plugins/cloud-profile/public/webcomponents/orov-login.html
+++ b/src/system-plugins/cloud-profile/public/webcomponents/orov-login.html
@@ -33,6 +33,9 @@
         },
         displayLoggedIn: function(){
           return !this.loggedIn;
+        },
+        registerEmitterHanlders: function(emitter){
+          //Required so that the underlying behavior and also register emitter events
         }
       })
     })();
