Copilots can now set power level

--- a/src/plugins/peer-view/public/webcomponents/orov-mc-assignments.html
+++ b/src/plugins/peer-view/public/webcomponents/orov-mc-assignments.html
@@ -30,7 +30,8 @@
             </td>
           </tr>
         </template>
-        </table>      
+        </table> 
+ <!--Peer Limit: <paper-slider min="0" max="50" value="50" on-immediate-value-change='PeerLimitChange'></paper-slider-->            
   </template>
   <script>
     (function() {
